--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "focusflow",
   "private": true,
@@ -13,11 +12,13 @@
     "@google/genai": "^1.41.0",
     "@hello-pangea/dnd": "^17.0.0",
     "canvas-confetti": "^1.6.0",
+    "firebase": "^12.9.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.11",
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
